Questions finally displayed.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Quiz Practice</title>
+       
+    </head>
+<body>
+<h1>Quiz on Important Facts</h1>
 <div class="quiz-container">
-    <div id="quiz"></div>
-  </div>
-  <button id="previous">Previous Question</button>
-  <button id="next">Next Question</button>
-  <button id="submit">Submit Quiz</button>
-  <div id="results"></div>
+  <div id="quiz"></div>
+</div>
+<button id="previous">Previous Question</button>
+<button id="next">Next Question</button>
+<button id="submit">Submit Quiz</button>
+<div id="results"></div>
+
+
+<footer>
+    <script src="scripts.js"></script>
+</footer>
+</body>
+</html>
